--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.3.1",
     "bulma": "^0.7.5",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.1.1",
     "popper": "^1.0.1",
